spring-boot-maven-plugin add -XX:MaxPermSize=1024m